--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site Info
-title:              "ai of liz lorena"
-description:        "here are my favorite AI-generated pieces"
+title:              "ai images of liz lorena"
+description:        "here are my favorite AI-generated images"
 
 # Author Info
 author_name:        Liz Lorena Berberena
