--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site Info
-title:              "ai images of liz lorena"
+title:              "ai images by liz lorena"
 description:        "here are my favorite AI-generated images"
 
 # Author Info
