--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title:              "ai images by liz lorena"
 description:        "here are my favorite AI-generated images"
 
 # Author Info
-author_name:        Liz Lorena Berberena
+author_name:        Liz Lorena
 
 # Site Settings
 baseurl:            "" # Base URL must end WITHOUT a slash, default: ""
